<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppliPFE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="config_semaine">Configuration semaine</string>
    <string name="config_jour">Configuration journée</string>
    <string name="name_semaine">Nom du profil</string>
    <string name="type_semaine">Type de profil</string>
    <string name="scenario">Scenario</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_configuration_jour">ConfigurationJour</string>
    <string name="title_activity_configuration_semaine">ConfigurationSemaine</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scenario">ScenarioActivity</string>
    <string name="title_activity_consommation">Consommation</string>

</resources>
