<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.l2gb.applipfe.ConfigurationSemaine"
    android:weightSum="1">

    <TextView android:text="@string/config_semaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/config_s"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l1"
        android:layout_below="@+id/config_s"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <TextView android:text="@string/name_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_s"
            android:id="@+id/name_s"
            android:textSize="15dp"/>

        <EditText android:id="@+id/edit_name_semaine"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="nom"
            android:textSize="15dp"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="sauvegarder"
            android:text="sauvegarder"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l2"
        android:layout_below="@+id/l1">

        <TextView android:text="@string/type_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_s"
            android:id="@+id/type_s"
            android:textSize="15dp"/>

        <EditText android:id="@+id/edit_message"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="type"
            android:textSize="15dp"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="Annuler"
            android:text="Annuler"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <TextView android:text="@string/scenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/scenario"
        android:textSize="20dp"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l3"
        android:layout_marginTop="20dp">

        <TextView android:text="Lundi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/lundi_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_lundi"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="55dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l4">

        <TextView android:text="Mardi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/mardi_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_mardi"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="54dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l5">

        <TextView android:text="Mercredi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/mercredi_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_mercredi"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="26dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l6">

        <TextView android:text="Jeudi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/jeudi_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_jeudi"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="57dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l7">

        <TextView android:text="Vendredi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/vendredi_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_vrendredi"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="28dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l8">

        <TextView android:text="Samedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/samedi_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_samedi"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l9">

        <TextView android:text="Dimanche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/dimanche_text"
            android:textSize="20dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/list_dimanche"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="19dp"/>

    </LinearLayout>


</LinearLayout>
