<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.l2gb.applipfe.ConfigurationJour"
    android:weightSum="1">

    <TextView android:text="@string/config_jour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/config_s"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l1"
        android:layout_below="@+id/config_s"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <TextView android:text="@string/name_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_s"
            android:id="@+id/name_s"
            android:textSize="15dp"/>

        <EditText android:id="@+id/edit_name_semaine"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="nom"
            android:textSize="15dp"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="sauvegarder"
            android:text="sauvegarder"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l2"
        android:layout_below="@+id/l1">

        <TextView android:text="@string/type_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_s"
            android:id="@+id/type_s"
            android:textSize="15dp"/>

        <EditText android:id="@+id/edit_message"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="type"
            android:textSize="15dp"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="annuler"
            android:text="Annuler"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>



    <TextView android:text="Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/temperature"
        android:textSize="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l3"
        android:layout_marginTop="10dp">

        <TextView android:text="Confort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/Tconfort"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/edit_temp_confort"
            android:text="T°C"
            android:layout_marginRight="10dp"
        />

        <TextView android:text="Economique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/Teco"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText"
            android:text="T°C"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l4"
        android:layout_marginTop="10dp">

        <TextView android:text="Créneaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/Tcreneau"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:onClick="addCreneau"
            android:id="@+id/button7"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/l5">

        <TableLayout android:layout_height="wrap_content"
            android:id="@+id/tablelayoutId"
            android:layout_width="fill_parent"
            android:background="#F87907"
            >

            <TableRow>
                <TextView android:id="@+id/l1r1"
                    android:text="test1 "
                    android:textColor="#000000"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView android:id="@+id/l1r2"
                    android:text="test2"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    />

            </TableRow>
        </TableLayout>
    </LinearLayout>



</LinearLayout>
